--- a/themes/diary/layouts/partials/head.html
+++ b/themes/diary/layouts/partials/head.html
@@ -79,6 +79,9 @@
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" media="screen">
 {{ end }}
 
+<!-- Lazy Loading CSS -->
+<link rel="stylesheet" href="{{ "css/lazy-loading.css" | relURL }}">
+
 <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Material+Icons">
 
