--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -440,8 +440,20 @@ a {
   $nav-item-hover-color-darken: 30%;
   $nav-item-active-background-alpha: 0.03;
   $nav-item-active-color-darken: 20%;
+  .nav-logo {
+    text-align: right;
+    padding: 30px 0 0 28px;
+    margin-bottom: 5px;
+    
+    img {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+    }
+  }
+  
   .nav-head {
-    padding: 30px 28px 30px 20px;
+    padding: 30px 28px 30px 28px;
     cursor: hand;
     cursor: pointer;
     margin-bottom: 10px;
@@ -627,7 +639,7 @@ a {
           padding: 30px 0;
           display: flex;
           flex-direction: row;
-          align-items: center;
+          align-items: flex-start;
 
           @media screen and (max-width: $single-column-max-width) {
             flex-direction: column-reverse;
