--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -646,7 +646,7 @@ a {
 
           @media screen and (max-width: $single-column-max-width) {
             flex-direction: column-reverse;
-            margin: 0 0 15px 0;
+            margin: 0;
             padding: 0;
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
             background: $front-container-background;
