--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -251,10 +251,24 @@ a {
       padding-left: 12px;
     }
     .nav-content {
-      padding: 12px 8px;
+      padding: 12px 8px 0 8px;
       justify-content: flex-start;
       max-width: unset !important;
     }
+    .nav-logo-mobile {
+      text-align: center;
+      padding: 10px 0 0 0;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin: 0 auto;
+      
+      img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    
     .navbar-brand {
       opacity: 0;
       text-align: left;
@@ -327,7 +341,7 @@ a {
   display: none !important;
   @media screen and (max-width: $single-column-max-width) {
     display: block !important;
-    padding: 50px 20px 80px 20px;
+    padding: 0 20px 20px 20px;
     transition: padding 0.5s ease-in-out, margin 0.5s ease-in-out;
     text-align: center;
     * {
