--- a/themes/diary/layouts/partials/mobile-header.html
+++ b/themes/diary/layouts/partials/mobile-header.html
@@ -40,7 +40,7 @@
 <transition name="fade">
     <div id="drawer-mask" v-bind:class="{ 'single-column-drawer-mask': mounted }" v-if="isDrawerOpen" v-on:click="toggleDrawer"></div>
 </transition>
-<nav id="navBar" class="navbar sticky-top navbar-light single-column-nav-container">
+<nav id="navBar" class="navbar navbar-light single-column-nav-container">
     <div id="navBackground" class="nav-background"></div>
     <div class="container container-narrow nav-content">
         <button id="nav_dropdown_btn" class="nav-dropdown-toggle" type="button" v-on:click="toggleDrawer">
@@ -48,9 +48,11 @@
                 menu
             </i>
         </button>
-        <a id="navTitle" class="navbar-brand" href="{{ "" | absLangURL }}">
-            {{.Site.Title}}
-        </a>
+        {{ if .Site.Params.logo }}
+        <div class="nav-logo-mobile">
+            <img src="{{ .Site.Params.logo }}" alt="{{ .Site.Title }}">
+        </div>
+        {{ end }}
     </div>
 </nav>
 <div class="single-column-header-container" id="pageHead"
