Add Archive link on the left menu sidebar on mobile

--- a/themes/diary/layouts/partials/sidebar.html
+++ b/themes/diary/layouts/partials/sidebar.html
@@ -19,6 +19,10 @@
         {{ end }}
     </a>
 
+    <a class="a-block nav-link-item" href="{{ "" | absLangURL }}">
+        Archive
+    </a>
+
     <div class="nav-link-list">
         {{ $current := .RelPermalink | absLangURL }}
         {{ range .Site.Menus.main }}
