--- a/themes/diary/layouts/partials/mobile-header.html
+++ b/themes/diary/layouts/partials/mobile-header.html
@@ -1,11 +1,14 @@
 <div class="single-column-drawer-container" id="drawer"
      v-bind:class="{ 'single-column-drawer-container-active': isDrawerOpen }">
     <div class="drawer-content">
-        <div class="drawer-menu">
+                <div class="drawer-menu">
             {{ if and (isset .Site.Params "googlesearchcode") (.IsHome) }}
             <script async src="https://cse.google.com/cse.js?cx={{.Site.Params.googleSearchCode}}"></script>
             <div class="gcse-searchbox-only" mobileLayout="true"></div>
             {{ end }}
+            <a class="a-block drawer-menu-item" href="{{ "" | absLangURL }}">
+                Archive
+            </a>
             {{ $current := .RelPermalink | absLangURL }}
             {{ range .Site.Menus.main }}
                 {{$actived := "false"}}
@@ -19,7 +22,7 @@
                     <div class="nav-link-subitem" v-if="!isHidden">
                         {{ range .Children }}
                         <li><a href="{{ .URL }}"> {{ .Name }}</a></li>
-                    {{ end }}
+                        {{ end }}
                     </div>
                 </div>
                 {{ else }}
