--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -21,6 +21,9 @@
     </a>
 
     <div class="nav-link-list">
+        <a class="a-block nav-link-item" href="{{ "" | absLangURL }}">
+            Archive
+        </a>
         {{ $current := .RelPermalink | absLangURL }}
         {{ range .Site.Menus.main }}
             {{$actived := "false"}}
