--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -534,6 +534,36 @@ a {
     font-size: $nav-footer-size;
   }
   
+  .nav-link-item {
+    &:first-child {
+      font-weight: 600;
+      color: #8B4513 !important;
+      padding-left: 25px;
+      margin-left: 5px;
+      
+      &:hover {
+        color: #654321 !important;
+        background: rgba(139, 69, 19, 0.05);
+      }
+    }
+  }
+  
+  .nav-link-item[href*="/about/"] {
+    font-weight: 600;
+    color: #8B4513 !important;
+    padding-left: 25px;
+    margin-left: 5px;
+    
+    &:hover {
+      color: #654321 !important;
+      background: rgba(139, 69, 19, 0.05);
+    }
+    
+    &.active {
+      color: #654321 !important;
+    }
+  }
+  
 
   @media screen and (max-width: $single-column-max-width) {
     display: none;
