--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -506,7 +506,7 @@ a {
   $nav-item-active-color-darken: 20%;
   .nav-logo {
     text-align: right;
-    padding: 30px 0 0 28px;
+    padding: 5px 0 0 28px;
     margin-bottom: 5px;
     
     img {
@@ -717,7 +717,7 @@ a {
   .post-list-container {
     width: 100%;
     min-height: 100vh;
-    padding: 20px 0 20px 0;
+    padding: 0 0 20px 0;
     background: $front-container-background;
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.12);
 
@@ -737,6 +737,10 @@ a {
           display: flex;
           flex-direction: row;
           align-items: flex-start;
+          
+          &:first-child {
+            padding-top: 70px;
+          }
 
           @media screen and (max-width: $single-column-max-width) {
             flex-direction: column-reverse;
