--- a/themes/diary/assets/scss/journal.scss
+++ b/themes/diary/assets/scss/journal.scss
@@ -717,7 +717,7 @@ a {
   .post-list-container {
     width: 100%;
     min-height: 100vh;
-    padding: 0 0 20px 0;
+    padding: 40px 0 20px 0;
     background: $front-container-background;
     box-shadow: 0 0 16px rgba(0, 0, 0, 0.12);
 
@@ -738,9 +738,7 @@ a {
           flex-direction: row;
           align-items: flex-start;
           
-          &:first-child {
-            padding-top: 70px;
-          }
+
 
           @media screen and (max-width: $single-column-max-width) {
             flex-direction: column-reverse;
