--- a/themes/diary/layouts/_default/single.html
+++ b/themes/diary/layouts/_default/single.html
@@ -34,14 +34,14 @@
 
                         {{ if .Params.categories }}
                             <i class="material-icons" style="">folder</i>
-                                <a href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}">{{ .Params.categories }}</a>
+                                <a href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}/">{{ .Params.categories }}</a>
                                 &nbsp;
                         {{ end }}
 
                         {{ if gt .Params.tags 0 }}
                             <i class="material-icons" style="">label</i>
                             {{ range .Params.tags }}
-                                <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+                                <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}/">{{ . }}</a>
                                 &nbsp;
                             {{ end }}
                         {{ end }}
