Add Buttondown integration

--- a/themes/diary/layouts/_default/single.html
+++ b/themes/diary/layouts/_default/single.html
@@ -75,6 +75,9 @@
                 </div>
             </div>
             
+            <!-- Newsletter Sign-up Form -->
+            {{- partial "newsletter-signup.html" . -}}
+            
             
             <nav class="post-pagination">
 
