--- a/layouts/index.rss.xml
+++ b/layouts/index.rss.xml
@@ -22,7 +22,7 @@
         <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
         {{ with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
         <guid>{{ .Permalink }}</guid>
-        <description>{{ .Site.Title }} {{ .Permalink }} - {{- .Content | html -}} - {{ .Permalink }} - {{.Site.Copyright}}</description>
+        <description>{{ .Site.Title }} {{ .Permalink }} - {{- .Content | replaceRE "src=\"([^\"]+)\"" (printf "src=\"%s%s$1\"" "https://weekly.sundayblender.com" (.Permalink | replaceRE "^http://localhost:1313" "")) | html -}} - {{ .Permalink }} - {{.Site.Copyright}}</description>
         </item>
     {{ end }}
     {{ end }}
