--- a/layouts/index.rss.xml
+++ b/layouts/index.rss.xml
@@ -1,6 +1,6 @@
 {{- printf "<?xml-stylesheet href=\"%srss.xsl\" type=\"text/xsl\"?>" .Site.BaseURL | safeHTML }}
 
-<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom" xmlns:content="http://purl.org/rss/1.0/modules/content/">
   <channel>
     <title>{{ if eq  .Title  .Site.Title }}{{ .Site.Title }}{{ else }}{{ with .Title }}{{.}} on {{ end }}{{ .Site.Title }}{{ end }}</title>
     <link>{{ .Permalink }}</link>
@@ -22,7 +22,8 @@
         <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
         {{ with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
         <guid>{{ .Permalink }}</guid>
-        <description>{{ with .Description | html }}{{ . }}{{ else }}{{ .Summary | html }}{{ end -}}</description>
+        <description>{{ .Content | html }}</description>
+        <content:encoded>{{ .Content | html }}</content:encoded>
         </item>
     {{ end }}
     {{ end }}
