Use absolute URL from hugo's build-in function

--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -2,7 +2,7 @@
 {{ $title := .Title }}
 
 <img 
-    src="{{ .Destination }}" 
+    src="{{ .Destination | absURL }}" 
     alt="{{ $alt }}"
     title="{{ $title }}"
     loading="lazy"
