--- a/layouts/index.rss.xml
+++ b/layouts/index.rss.xml
@@ -22,8 +22,10 @@
         <pubDate>{{ .Date.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
         {{ with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
         <guid>{{ .Permalink }}</guid>
-        <description>{{ .Content | html }}</description>
-        <content:encoded>{{ .Content | html }}</content:encoded>
+        <description>{{ printf "<p><strong><a href='%s'>Read on Website</a></strong></p>%s" .Permalink .Content | html }}
+        </description>
+        <content:encoded>{{ printf "<p><strong><a href='%s'>Read on Website</a></strong></p>%s" .Permalink .Content | html }}
+        </content:encoded>
         </item>
     {{ end }}
     {{ end }}
